# haskell-koellner-phonetik

./: koellner-phonetic.cabal
src/: KoellnerPhonetik.hs
test/: Main.hs
